@startuml CompleteClassDiagram
title CompleteClassDiagram
class Element #GhostWhite {
- double _data
- Element? _next
---
+ double getData()
+ Void setData(double value)
+ Element? getNext()
+ Void setNext(Element? value)
---
}
class ObjectDiagram << static >>  #GhostWhite {
- {static} PlantUML.Logic.ObjectDiagramCreator diagramCreator = new("od_Stack.puml")
---
---
+ {static} void Create(object obj, string[] notes)
}
class Program #GhostWhite {
---
---
- {static} void Main(string[] args)
+ {static} double Parse(string input)
}
class Stack #GhostWhite {
- Element? _head = null
---
+ bool getIsEmpty()
---
+ void Push(double data)
+ double Pop()
}
Element "0..1" *-- "1" Element : _next
Stack "0..1" *-- "1" Element : _head
@enduml
